--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -7,25 +7,35 @@
     <title>Memory Card Game</title>
   </head>
   <body>
-    <h1>Memory Game</h1>
-    <a href="#">Instruction</a>
-    <a href="#">Game</a>
+  <main>
+    <header>
+      <h1>Memory Game</h1>
+    </header>
+    <nav>
+      <a href="#">Instruction</a>
+      <a href="#">Game</a>
+    </nav>
     <h2>Instructions</h2>
-    <p> Concentration, also known as Match Match, Memory,
-      Pelmanism, Shinkei-suijaku,
-      Pexeso or simply Pairs, is
-      a card game in which all of
-      the cards are laid face down
-      on a surface and two cards are
-      flipped face up over each turn.
-      The object of the game
-      is to turn over pairs of matching cards.</p>
-     <div>
-        <img src="images/back.png" alt="Queen of Diamonds">
-        <img src="images/back.png" alt="Queen of Hearts">
-        <img src="images/back.png" alt="King of Diamonds">
-        <img src="images/back.png" alt="King of Hearts">
-     </div>
-     <script src="js/main/main.js"></script>
+    <p class="message"> Concentration, also known as Match Match, Memory,
+    Pelmanism, Shinkei-suijaku,
+    Pexeso or simply Pairs, is
+    a card game in which all of
+    the cards are laid face down
+    on a surface and two cards are
+    flipped face up over each turn.
+    The object of the game
+    is to turn over pairs of matching cards.</p>
+    <div id = "game-board" class="board clearfix">
+      <img id="0" src="images/back.png" alt="Queen of Diamonds">
+      <img id="1" src="images/back.png" alt="Queen of Hearts">
+      <img id="2" src="images/back.png" alt="King of Diamonds">
+      <img id="3" src="images/back.png" alt="King of Hearts">
+    </div>
+    <script src="js/main/main.js"></script>
+  </main>
+  <footer>
+    Copyright 2017
+  </footer>
+
   </body>
 </html>
