--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="css/styles/styles.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
     <meta charset="utf-8">
     <title>Memory Card Game</title>
   </head>
